# inventory-

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: inventory.h
src/: InventoryManager.cpp  InventoryManager.hpp  inventory.c  inventory.h  main.cpp
web-frontend/: app.js  index.html  styles.css
web-frontend/js/: InventoryManager.js  StorageService.js  UIController.js  theme.js
